[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twilio-sms-mcp"
version = "1.0.0"
description = "Production-grade MCP server for Twilio SMS — send, receive, schedule, and manage SMS via AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=2.0.0",
    "twilio>=9.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
twilio-sms-mcp = "twilio_sms_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/twilio_sms_mcp"]
